--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TC_Projeto</string>
+    <string name="google_maps_api_key">AIzaSyCyexIc7mxdzwsWb0IWnyvTewD65Iv6qvg</string>
 </resources>
